Answering question to logical filters

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 2/Predicting house prices - Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 2/Predicting house prices - Assignment.ipynb
@@ -1499,7 +1499,7 @@
    "source": [
     "# Assignement questions\n",
     "\n",
-    "Now, take the sales data, select only the houses with this zip code, and compute the average price."
+    "### Question 1: Now, take the sales data, select only the houses with this zip code, and compute the average price."
    ]
   },
   {
@@ -1530,6 +1530,43 @@
    ],
    "source": [
     "print highestPriceZipCode['price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2: What fraction of the all houses have ‘sqft_living’ in the range between 2000 and 4000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "logical_filters = sales[(sales['sqft_living'] >= 2000) & (sales['sqft_living'] <= 4000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9221\n"
+     ]
+    }
+   ],
+   "source": [
+    "print logical_filters.num_rows()"
    ]
   },
   {
