Evaluating RMSE (last assignement)

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 2/Predicting house prices - Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 2/Predicting house prices - Assignment.ipynb
@@ -1499,7 +1499,7 @@
    "source": [
     "# Assignement questions\n",
     "\n",
-    "### Question 1: Now, take the sales data, select only the houses with this zip code, and compute the average price."
+    "### Question 1: We found the zip code with the highest average house price. What is the average house price of that zip code?"
    ]
   },
   {
@@ -1536,23 +1536,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2: What fraction of the all houses have ‘sqft_living’ in the range between 2000 and 4000"
+    "### Question 2: What fraction of the houses have living space between 2000 sq.ft. and 4000 sq.ft.?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "logical_filters = sales[(sales['sqft_living'] >= 2000) & (sales['sqft_living'] <= 4000)]"
+    "logical_filters = sales[(sales['sqft_living'] > 2000) & (sales['sqft_living'] < 4000)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -1561,12 +1561,161 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9221\n"
+      "9111\n",
+      "21613\n"
      ]
     }
    ],
    "source": [
-    "print logical_filters.num_rows()"
+    "print logical_filters.num_rows()\n",
+    "print sales.num_rows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3: What is the difference in RMSE between the model trained with my_features and the one trained with advanced_features?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "advanced_features = [\n",
+    "'bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'zipcode',\n",
+    "'condition', # condition of house\n",
+    "'grade', # measure of quality of construction\n",
+    "'waterfront', # waterfront property\n",
+    "'view', # type of view\n",
+    "'sqft_above', # square feet above ground\n",
+    "'sqft_basement', # square feet in basement\n",
+    "'yr_built', # the year built\n",
+    "'yr_renovated', # the year renovated\n",
+    "'lat', 'long', # the lat-long of the parcel\n",
+    "'sqft_living15', # average sq.ft. of 15 nearest neighbors\n",
+    "'sqft_lot15', # average lot size of 15 nearest neighbors \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_data,test_data = sales.random_split(.8,seed=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 6\n",
+      "PROGRESS: Number of unpacked features : 6\n",
+      "PROGRESS: Number of coefficients    : 115\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.051103     | 3763208.270524     | 181908.848367 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_features_model = graphlab.linear_regression.create(train_data,target='price',features=my_features,validation_set=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 18\n",
+      "PROGRESS: Number of unpacked features : 18\n",
+      "PROGRESS: Number of coefficients    : 127\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.031030     | 3469012.450663     | 154580.940735 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_adv_features_model = graphlab.linear_regression.create(train_data,target='price',features=advanced_features,validation_set=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_error': 3486584.509381928, 'rmse': 179542.43331269105}\n",
+      "{'max_error': 3556849.413848093, 'rmse': 156831.11680191013}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print my_features_model.evaluate(test_data)\n",
+    "print my_adv_features_model.evaluate(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22711.316510780918"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "179542.43331269105 - 156831.11680191013"
    ]
   },
   {
