Loading data in iPython notebook

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 3/Analyzing product sentiment-Assignement.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 3/Analyzing product sentiment-Assignement.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Predicting sentiment from product reviews\n",
+    "# Predicting sentiment from product reviews\n",
     "\n",
-    "#Fire up GraphLab Create"
+    "# Fire up GraphLab Create"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,14 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Read some product review data\n",
+    "# Read some product review data\n",
     "\n",
     "Loading reviews for a set of baby products. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,10 +40,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] This commercial license of GraphLab Create is assigned to engr@dato.com.\n",
+      "[INFO] This non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.frand will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
       "\n",
-      "[INFO] Start server at: ipc:///tmp/graphlab_server-121368 - Server binary: /home/ubuntu/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1440696851.log\n",
-      "[INFO] GraphLab Server Version: 1.5.2\n"
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-5222 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1446397382.log\n",
+      "[INFO] GraphLab Server Version: 1.6.1\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Let's explore this data together\n",
+    "# Let's explore this data together\n",
     "\n",
     "Data includes the product name, the review text and the rating of the review. "
    ]
